fixed link styling on mobile devices

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -427,6 +427,12 @@ section#about {
         .title {
             font-size: 2.4rem;
         }
+
+        .cta{
+            a {
+                font-size: 1.6rem;
+            }
+        }
     }
 
 
